delete of regions scaffold and db

--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -45,11 +45,11 @@
   </div>
   <div class="field">
     <%= f.label :phone %><br>
-    <%= f.number_field :phone %>
+    <%= f.text_field :phone %>
   </div>
   <div class="field">
     <%= f.label :mobile %><br>
-    <%= f.number_field :mobile %>
+    <%= f.text_field :mobile %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
