--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,32 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Employees</h1>
+<h1>Listing Participants</h1>
 
 <table>
   <thead>
     <tr>
       <th>Last name</th>
       <th>First name</th>
-      <th>Organization</th>
-      <th>Phone</th>
+      <th>Date de naissance</th>
+      <th>numero identifiant</th>
       <th>Email</th>
-      <th>Id number</th>
+      <th>adresse</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @employees.each do |employee| %>
+    <% @participants.each do |participant| %>
       <tr>
-        <td><%= employee.last_name %></td>
-        <td><%= employee.first_name %></td>
-        <td><%= employee.organization %></td>
-        <td><%= employee.phone %></td>
-        <td><%= employee.email %></td>
-        <td><%= employee.id_number %></td>
-        <td><%= link_to 'Show', employee %></td>
-        <td><%= link_to 'Edit', edit_employee_path(employee) %></td>
-        <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= participant.last_name %></td>
+        <td><%= participant.first_name %></td>
+        <td><%= participant.birth_date %></td>
+        <td><%= participant.id_number %></td>
+        <td><%= participant.email %></td>
+        <td><%= participant.adress %></td>
+        <td><%= link_to 'Show', participant %></td>
+        <td><%= link_to 'Edit', edit_participant_path(participant) %></td>
+        <td><%= link_to 'Destroy', participant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Employee', new_employee_path %>
+<%= link_to 'New Participant', new_participant_path %>
