--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
 
   <div id="nav">
     <% if current_user %>
-      <%= link_to "Edit Profile", participants_path(current_user.id) %>
+      <%= link_to "Edit Profile", edit_employee_path(current_user.id) %>
       <%= link_to "Logout", :logout, method: :post %>
     <% else %>
-      <%= link_to "New Employee", new_employee_path %> |
       <%= link_to "New Admin Employee", new_admin_employee_path %> |
+      <%= link_to "New Employee", new_employee_path %> |
       <%= link_to "Login", :login %>
     <% end %>
   </div>
