--- a/app/views/admin/employees/index.html.erb
+++ b/app/views/admin/employees/index.html.erb
@@ -1,3 +1,7 @@
+<div id="nav">
+    <%= link_to "Edit Profile", edit_admin_employee_path(current_user.id) %>
+</div>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Admin Employees</h1>
