--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,6 +1,79 @@
+<%= form_for(@employee) do |f| %>
+    <% if @employee.errors.any? %>
+        <div id="error_explanation">
+            <h2><%= pluralize(@employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
+
+            <ul>
+                <% @employee.errors.full_messages.each do |message| %>
+                    <li>
+                        <%= message %>
+                    </li>
+                    <% end %>
+            </ul>
+        </div>
+        <% end %>
+
 <h1>Editing Employee</h1>
 
-<%= render 'form' %>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                </div>
+                <div class="panel-body">
+                    <div class="row center-block">
+                        <div class="col-lg-4">
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="panel panel-primary">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Identité</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <ul class="list-group list-unstyled">
 
+
+                                        <li class="list-group-item">
+                                            <div class="form-group">
+                                                <div id="photo_attachment_container">
+                                                    <%= f.label :password %>
+                                                        <br>
+                                                        <br>
+                                                        <%= f.password_field :password %>
+                                                            <br>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="form-group">
+                                                <div id="photo_attachment_container">
+                                                    <%= f.label :password_confirmation %>
+                                                        <br>
+                                                        <br>
+                                                        <%= f.password_field :password_confirmation %>
+                                                            <br>
+                                                </div>
+                                            </div>
+                                        </li>
+                                        <li class="list-group-item">
+                                            <div class="form-group">
+                                                <div class="actions">
+                                                    <div class="pull-right">  <%= f.submit 'VALIDER', :class => 'btn btn-primary  block-right' %></div>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    <div class="col-lg-4">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<% end %>
 <%= link_to 'Show', @employee %> |
 <%= link_to 'Back', employees_path %>
