--- a/app/views/employees/edit.html.erb
+++ b/app/views/employees/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Employee</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @employee %> |
-<%= link_to 'Back', employees_path %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title center-left">Éditer un employé</h3>
+        </div>
+        <%= render 'form' %>
+        <div class="pull-right"><%= link_to 'Show', @employee %></div>
+        <div class="pull-right"><%= link_to 'Back', employees_path, :class => 'span3 offset2 btn btn-primary block-right' %></div>
+      </div>
+    </div>
+  </div>
+</div>
