--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -1,5 +1,16 @@
-<h1>New Participant</h1>
-
-<%= render 'form' %>
-
-  <div class="pull-right"><%= link_to 'Back', participants_path, :class => 'span3 offset2 btn btn-primary submit_class_name_here block-right' %></div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">Nouveau participant</h3>
+        </div>
+        <div class="panel-body">
+          <%= render 'form' %>
+          <div class="pull-right"><%= link_to 'Retour', participants_path, :class => 'span3 offset2 btn btn-primary submit_class_name_here block-right' %></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
