--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -21,13 +21,12 @@
                   <h3 class="panel-title">Photo de profil</h3>
                 </div>
                 <div class="panel-body">
-                    <div class="img-thumbnail">
-                      <%= image_tag @participant.picture.url(:medium), :class => '' %>
-                    </div>
+                  <div class="img-thumbnail">
+                    <%= image_tag @participant.picture.url(:medium), :class => '' %>
+                  </div>
                 </div>
               </div>
             </div>
-
             <div class="col-lg-4">
               <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -39,7 +38,6 @@
                       <div class="form-group">
 
                         <%= @participant.last_name %>
-
                       </div>
                     </li>
                     <li class="list-group-item">
@@ -116,7 +114,7 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          <div class="row-fluid">
             <div class="col-lg-4">
               <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -154,7 +152,7 @@
               </div>
             </div>
             <div class="col-lg-8">
-              <!-- <div class="panel panel-primary">
+              <div class="panel panel-primary">
                 <div class="panel-heading">
                   <h3 class="panel-title">Documents</h3>
                 </div>
@@ -162,13 +160,12 @@
                   <ul class="list-group list-unstyled">
                     <li class="list-group-item">
                       <div class="form-group">
-                        <div id="photo_attachment_container">
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
+                        <%= @participant.document %>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
