--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -13,9 +13,9 @@
 
         <div class="panel-body">
           <div class="row center-block">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-lg-offset-4">
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-lg-offset-4">
               <div class="panel panel-primary">
                 <div class="panel-heading">
                   <h3 class="panel-title">Identité</h3>
@@ -73,7 +73,7 @@
                           <%= f.password_field :password_confirmation %><br>
                         </div>
                       </div>
-                    </li>   
+                    </li>
                     <li class="list-group-item">
                       <div class="form-group">
                         <div id="form_group">
@@ -93,7 +93,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-lg-offset-4">
             </div>
           </div>
   <% end %>
