--- a/app/views/admin/employees/edit.html.erb
+++ b/app/views/admin/employees/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Admin Employee</h1>
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title center-left">Éditer un employé</h3>
+        </div>
 <%= render 'form' %>
 
-<%= link_to 'Show', @admin_employee %> |
-<%= link_to 'Back', admin_employees_path %>
+<div class="pull-right"><%= link_to 'Show', @employee %></div>
+<div class="pull-right"><%= link_to 'Back', employees_path, :class => 'span3 offset2 btn btn-primary block-right' %></div>
+</div>
+</div>
+</div>
+</div>
