--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,55 +1,99 @@
-<div id="nav">
-    <%= link_to "Edit Profile", edit_employee_path(current_user.id) %>
+<%= form_for(@employee) do |f| %>
+<% if @employee.errors.any? %>
+<div id="error_explanation">
+<h2><%= pluralize(@employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
+
+<ul>
+<% @employee.errors.full_messages.each do |message| %>
+<li><%= message %></li>
+<% end %>
+</ul>
 </div>
+<% end %>
 
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Participants</h1>
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="pull-right"><%= link_to 'New Participant', new_participant_path, :class => 'btn btn-primary block-right' %></div>
-  </div>
-  <br>
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-        </div>
-        <div class="panel-body">
-          <div class="row text-center">
-            <table class="table table-hover">
-              <thead>
-                <tr>
-                  <th  class="text-center"scope="row">Last name</th>
-                  <th class="text-center">First name</th>
-                  <th class="text-center">Date de naissance</th>
-                  <th class="text-center">numero identifiant</th>
-                  <th class="text-center">Email</th>
-                  <th class="text-center">adresse</th>
-                  <th class="text-center" colspan="3"></th>
-                </tr>
-              </thead>
-
-              <tbody class="table table-hover">
-                <% @participants.each do |participant| %>
-
-                <tr>
-                  <td  class="text-center" scope="row"><%= participant.last_name %></td>
-                  <td class="text-center"><%= participant.first_name %></td>
-                  <td class="text-center"><%= participant.birth_date %></td>
-                  <td class="text-center"><%= participant.id_number %></td>
-                  <td class="text-center"><%= participant.email %></td>
-                  <td class="text-center"><%= participant.adress %></td>
-                  <td class="text-center"><%= link_to 'Show', participant, :class => 'btn btn-default btn-xs pull-right block-right' %></td>
-                  <td class="text-center"><%= link_to 'Edit', edit_participant_path(participant), :class => 'btn btn-default btn-xs pull-right block-right' %></td>
-                  <td class="text-center"><%= link_to 'Destroy', participant, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-default btn-xs pull-right block-right' %></td>
-                </tr>
-                <% end %>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="panel-body">
+<div class="row center-block">
+<div class="col-lg-4 col-lg-offset-4">
 </div>
+<div class="col-lg-4 col-lg-offset-4">
+<div class="panel panel-primary">
+<div class="panel-heading">
+<h3 class="panel-title">Identité</h3>
+</div>
+<div class="panel-body">
+<ul class="list-group list-unstyled">
+<li class="list-group-item">
+<div class="form-group">
+<label for="texte"><%= f.label :last_name %></label>
+<%= f.text_field :last_name, :class => 'form-control'%>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<label for="texte"><%= f.label :first_name %></label>
+<%= f.text_field :first_name, :class => 'form-control' %>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<label for="texte"><%= f.label :organization %></label><br>
+<%= f.text_field :organization, :class => 'form-control' %>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<label for="texte"><%= f.label :phone %></label>
+<%= f.number_field :phone, :class => 'form-control' %>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<label for="texte"><%= f.label :email %></label>
+<%= f.email_field :email, :class => 'form-control' %>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<label for="texte"><%= f.label :id_number %></label>
+<%= f.text_field :id_number, :class => 'form-control' %>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<div id="photo_attachment_container">
+<%= f.label :password %><br><br>
+<%= f.password_field :password %><br>
+</div>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<div id="photo_attachment_container">
+<%= f.label :password_confirmation %><br><br>
+<%= f.password_field :password_confirmation %><br>
+</div>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<div id="form_group">
+<%= f.label :admin %><br><br>
+<%= f.check_box :admin %><br>
+</div>
+</div>
+</li>
+<li class="list-group-item">
+<div class="form-group">
+<div class="actions">
+<div class="pull-right">  <%= f.submit 'VALIDER', :class => 'btn btn-primary  block-right' %></div>
+</div>
+</div>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="col-lg-4 col-lg-offset-4">
+</div>
+</div>
+<% end %>
